--- a/index.html
+++ b/index.html
@@ -57,6 +57,22 @@
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
+    <h5 class="card-title h">Migrating my NAS to a bigger HDD.</h5>
+      <img src="pictures/nas.png" class="card-img-top" alt="..." width="2454">
+      <br>
+      <br>
+      <p class="card-text">1 TB simply wasn't cutting it.
+       <!-- <small>(Since I wasn't going to wait around for each video to download before moving on to the next one, there's 8 parallel downloads as seen by the 8 terminal windows)</small> -->
+    </p>
+    <p class="card-text"><small class="text-muted">4th May, 2023.</small></p>
+  </div>
+  </div>
+  </div>
+
+  <hr>
+
+<div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
     <h5 class="card-title h"></h5>
       <img src="pictures/pyq.png" class="card-img-top" alt="..." width="2454">
       <br>
