--- a/index.html
+++ b/index.html
@@ -274,6 +274,20 @@
 
   <div class="container"><div class="card" style="max-width: 25rem;">
     <div class="card-body">
+      <h5 class="card-title h">Get it on Z-Library!</h5>
+      <img src="pictures/zlib.png" class="card-img-top" alt="..." width="2454">
+      <br>
+      <br>
+      <p class="card-text">I worked so hard to get this book so that you don't have to! </p>
+      <p class="card-text" ><small class="text">1st October, 2022.</small></p>
+    </div>
+    </div>
+    </div>
+  
+    <hr>
+
+  <div class="container"><div class="card" style="max-width: 25rem;">
+    <div class="card-body">
       <h5 class="card-title h">A Super Secret Mission.</h5>
       <img src="pictures/secret.jpeg" class="card-img-top" alt="..." width="2454">
       <br>
