--- a/index.html
+++ b/index.html
@@ -57,6 +57,21 @@
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
+    <h5 class="card-title h">The Milky Way, an attempt.</h5>
+      <img src="pictures/astro.jpg" class="card-img-top" alt="..." width="2454">
+      <br>
+      <br>
+      <p class="card-text">Captured on an IMX586 at Pangong Tso.
+    </p>
+    <p class="card-text"><small class="text-muted">23rd June, 2023.</small></p>
+  </div>
+  </div>
+  </div>
+
+  <hr>
+
+<div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
     <h5 class="card-title h">Taking out my HDD hate on -...</h5>
       <img src="pictures/hdd.png" class="card-img-top" alt="..." width="2454">
       <br>
