--- a/index.html
+++ b/index.html
@@ -55,20 +55,15 @@
 
 <br>
 
-<div class="container"><div class="card" style="max-width: 25rem;">
+<div class="card text-white bg-dark mb-3" style="max-width: 25rem;">
+  <img class="card-img-top" src="pictures/astro.jpg" alt="Card image cap">
   <div class="card-body">
-    <h5 class="card-title h">The Milky Way, an attempt.</h5>
-      <img src="pictures/astro.jpg" class="card-img-top" alt="..." width="2454">
-      <br>
-      <br>
-      <p class="card-text">Captured on an IMX586 at Pangong Tso.
-    </p>
+    <h5 class="card-title">The Milky Way, an attempt.</h5>
+    <p class="card-text">Captured on a IMX586 at Pangong Tso.</p>
     <p class="card-text"><small class="text-muted">23rd June, 2023.</small></p>
   </div>
-  </div>
-  </div>
-
-  <hr>
+</div>
+<hr>
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
