--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
 <br>
 
+<div class="container">
 <div class="card text-white bg-dark mb-3" style="max-width: 25rem;">
   <img class="card-img-top" src="pictures/astro.jpg" alt="Card image cap">
   <div class="card-body">
@@ -62,6 +63,7 @@
     <p class="card-text">Captured on a IMX586 at Pangong Tso.</p>
     <p class="card-text"><small class="text-muted">23rd June, 2023.</small></p>
   </div>
+</div>
 </div>
 <hr>
 
