--- a/index.html
+++ b/index.html
@@ -55,6 +55,34 @@
 
 <br>
 
+<div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
+    <h5 class="card-title h">Synthesizing Handwriting.</h5>
+      <img src="pictures/handwriting.svg" class="card-img-top" alt="..." width="2454">
+      <br>
+      <br>
+      <p class="card-text">Definitely read <a href="https://arxiv.org/abs/1308.0850">Generating Sequences With Recurrent Neural Networks</a> by Alex Graves.
+    </p>
+    <p class="card-text"><small class="text-muted">17th August, 2023.</small></p>
+  </div>
+  </div>
+  </div>
+
+  <hr><div class="container"><div class="card" style="max-width: 25rem;">
+    <div class="card-body">
+      <h5 class="card-title h">Making a 2D Printer from my 3D Printer.</h5>
+        <img src="pictures/plotter.png" class="card-img-top" alt="..." width="2454">
+        <br>
+        <br>
+        <p class="card-text">A plotter with a 0.025mm accuracy is quite impressive tbh.
+      </p>
+      <p class="card-text"><small class="text-muted">16th August, 2023.</small></p>
+    </div>
+    </div>
+    </div>
+  
+    <hr>
+
 <div class="container">
 <div class="card text-white bg-dark mb-3" style="max-width: 25rem;">
   <img class="card-img-top" src="pictures/astro.jpg" alt="Card image cap">
@@ -165,7 +193,7 @@
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
-    <h5 class="card-title h">Another Educational Videos Heist </h5>
+    <h5 class="card-title h">Another Educational Videos Heist. </h5>
 
     <p class="card-text">This one was from a well built app. Had to manually get the link to the m3u8 file for each video and immediately run an ffmpeg command to download it before the authorization expired.
       <br>
@@ -608,7 +636,7 @@
 
 <div class="container"><div class="card" style="max-width: 25rem;">
 <div class="card-body">
-  <h5 class="card-title h">Round 1 NEET 2020 Results</h5>
+  <h5 class="card-title h">Round 1 NEET 2020 Results.</h5>
   <p class="card-text">My algorithm for ranking colleges based on counselling data has betrayed me.
   </p>
   <img src="college_rankings/neet2020.png" class="card-img-top" alt="..." width="2454">
@@ -647,7 +675,7 @@
 <div class="container"><div class="card" style="max-width: 25rem;">
 <img src="pi_tests/final.jpg" class="card-img-top" alt="..." width="2454">
 <div class="card-body">
-  <h5 class="card-title h">Raspberry Pi Temperature Tests</h5>
+  <h5 class="card-title h">Raspberry Pi Temperature Tests.</h5>
   <p class="card-text">I got a new case for my Raspberry Pi and ran some stress
     tests. See for yourself, I'm keeping it in the case with a fan.
   </p>
@@ -662,7 +690,7 @@
 <div class="container"><div class="card" style="background-color:#323232; max-width: 25rem;">
 <img src="artwork.jpeg" class="card-img-top" alt="..." width="2454">
 <div class="card-body">
-  <h5 class="card-title h" style="color:#FFFFFF">Chatistics is Open Source</h5>
+  <h5 class="card-title h" style="color:#FFFFFF">Chatistics is Open Source.</h5>
   <p class="card-text" style="color:#FFFFFF">As of v5.0 Chatistics is open to read and analyse. Read more here:
   </p>
   <a href="chatistics.html" class="card-link">Chatistics</a>
@@ -676,7 +704,7 @@
 <div class="container"><div class="card" style="max-width: 25rem;">
 <img src="college_rankings/final_rankings.png" class="card-img-top" alt="..." width="2454">
 <div class="card-body">
-  <h5 class="card-title h">NEET College Rankings</h5>
+  <h5 class="card-title h">NEET College Rankings.</h5>
   <p class="card-text">NEET Colleges ranked based on counselling data and hence
     general public opinion.
   </p>
@@ -691,7 +719,7 @@
   
   
   <div class="card-body">
-    <h5 class="card-title h">Jackbox Party Packs Rated</h5>
+    <h5 class="card-title h">Jackbox Party Packs Rated.</h5>
     <img src="pictures/jackbox.png" class="card-img-top" alt="..." width="2454">
     <p class="card-text"><small class="text-muted">18th August, 2020.</small></p>
   </div>
@@ -702,7 +730,7 @@
 
   <div class="container"><div class="card" style="max-width: 25rem;">
     <div class="card-body">
-      <h5 class="card-title h">Long Exposure of an LED Strip</h5>
+      <h5 class="card-title h">Long Exposure of an LED Strip.</h5>
     
       <img src="pictures/exposure.png" class="card-img-top" alt="..." width="2454">
       <p class="card-text"><small class="text-muted">29th June, 2020.</small></p>
@@ -712,7 +740,7 @@
 
   <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
-    <h5 class="card-title h">Example Blog Post</h5>
+    <h5 class="card-title h">Example Blog Post.</h5>
     <p class="card-text">So Divyansh had this awesome idea about a blog. Apoorvam is also doing something like that.
       Something which I am not allowed to say. Anyways, this is a WIP. Come back later!
     </p>
@@ -726,7 +754,7 @@
 <div class="container"><div class="card" style="max-width: 25rem;">
   <img src="screen.png" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">Another Example Blog Post</h5>
+    <h5 class="card-title">Another Example Blog Post.</h5>
     <p class="card-text">Some quick example text to build on the card title. Will do later. Or maybe someone can contribute or whatever.</p>
   </div>
   </div>
