--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
       <img src="pictures/handwriting.svg" class="card-img-top" alt="..." width="2454">
       <br>
       <br>
-      <p class="card-text">Definitely read <a href="https://arxiv.org/abs/1308.0850">Generating Sequences With Recurrent Neural Networks</a> by Alex Graves.
-    </p>
+      <p class="card-text">The next logical step after acquiring a plotter. <br><small>Definitely read <a href="https://arxiv.org/abs/1308.0850">Generating Sequences With Recurrent Neural Networks</a> by Alex Graves.
+    </p></small>
     <p class="card-text"><small class="text-muted">17th August, 2023.</small></p>
   </div>
   </div>
