--- a/index.html
+++ b/index.html
@@ -83,6 +83,22 @@
   
     <hr>
 
+
+  <div class="container">
+      <div class="card mb-3" style="max-width: 25rem;">
+        
+        
+        <div class="card-body">
+          <h5 class="card-title">Clear Skies = Astrophography.</h5>
+          <img class="card-img-top" src="pictures/astrotwo.png" alt="Card image cap">
+          <br> <br>
+          <p class="card-text">Andromeda on the top right.</p>
+          <p class="card-text"><small class="text-muted">23rd June, 2023.</small></p>
+        </div>
+      </div>
+      </div>
+      <hr>
+
 <div class="container">
 <div class="card text-white bg-dark mb-3" style="max-width: 25rem;">
   <img class="card-img-top" src="pictures/astro.jpg" alt="Card image cap">
