--- a/index.html
+++ b/index.html
@@ -55,6 +55,21 @@
 
 <br>
 
+
+<div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
+    <h5 class="card-title h">Replacable RTC Batteries Please.</h5>
+      <img src="pictures/perimeter.jpg" class="card-img-top" alt="..." width="2454">
+      <br>
+      <br>
+      <p class="card-text">Snipping the tiny tangled wires on my Mom's very proprietary Perimeter was NOT a fun task. iFixit 4/10.</p>
+    <p class="card-text"><small class="text-muted">16th November, 2023.</small></p>
+  </div>
+  </div>
+  </div>
+
+  <hr>
+
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
     <h5 class="card-title h">Synthesizing Handwriting.</h5>
@@ -74,7 +89,7 @@
         <img src="pictures/plotter.png" class="card-img-top" alt="..." width="2454">
         <br>
         <br>
-        <p class="card-text">A plotter with a 0.025mm accuracy is quite impressive tbh.
+        <p class="card-text">A plotter with a 0.0125mm accuracy is quite impressive tbh.
       </p>
       <p class="card-text"><small class="text-muted">16th August, 2023.</small></p>
     </div>
