--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
-    <h5 class="card-title h">Replacable RTC Batteries Please.</h5>
+    <h5 class="card-title h">Replacable RTC Batteries. Please.</h5>
       <img src="pictures/perimeter.jpg" class="card-img-top" alt="..." width="2454">
       <br>
       <br>
@@ -69,6 +69,20 @@
   </div>
 
   <hr>
+
+  <div class="container"><div class="card" style="max-width: 25rem;">
+    <div class="card-body">
+      <h5 class="card-title h">Ordering Pages using Computer Vision.</h5>
+      <img src="pictures/opencv.png" class="card-img-top" alt="..." width="2454">
+        <br>
+        <br>
+        <p class="card-text"> Using OpenCV to read the page numbers and number the files accordingly. <a href="mainpy.html">Code.</a></p> 
+      <p class="card-text"><small class="text-muted">7th September, 2023.</small></p>
+    </div>
+    </div>
+    </div>
+  
+    <hr>
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
