--- a/kanishk.html
+++ b/kanishk.html
@@ -47,7 +47,7 @@ body {
 <body>
 
   <div class="paper">
-    <img src="postcard.png" width="200px">
+    <img src="postcard.png">
   </div> 
    
 
