--- a/kanishk.html
+++ b/kanishk.html
@@ -2,12 +2,6 @@
 <html>
 <head>
 <style>
-html {
-  box-sizing: border-box;
-}
-*, *::before, *::after {
-  box-sizing: inherit;
-}
 
 body {
   background: #000000;
@@ -25,7 +19,7 @@ body {
 
 .paper {
   background: #000000;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0)
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0);
   opacity: 0;
   animation: paper 2s linear forwards;
 }
@@ -37,7 +31,7 @@ body {
   }
   100% {
     opacity: 1;
-    transform: scale(1) rotate(1450deg);
+    transform: scale(0.8) rotate(1450deg);
   }
 }
 
