--- a/foss.html
+++ b/foss.html
@@ -60,28 +60,28 @@
     
       <div class="col">
         <a href="https://sonarr.asimplesock.com">
-            <div class="p-2 ml-2">
+            <div class="p-2 ml-2 mt-2">
                 <img src="pictures/sonarr.svg" class="img-fluid" card-img-top />
               </div>
         </a>
       </div>
       <div class="col">
         <a href="https://jellyfin.asimplesock.com">
-            <div class="p-1">
+            <div class="p-1 mt-1">
                 <img src="pictures/jellyfin.svg" class="img-fluid" card-img-top />
               </div>
         </a>
       </div>
       <div class="col">
         <a href="https://prowlarr.asimplesock.com">
-            <div class="p-2 mr-2">
+            <div class="p-2 mr-2 mt-2">
                 <img src="pictures/prowlarr.svg" class="img-fluid" card-img-top />
               </div>
         </a>
       </div>
       <div class="col">
         <a href="https://radarr.asimplesock.com">
-            <div class="p-2 ml-2">
+            <div class="p-2 ml-2 mt-2">
                 <img src="pictures/radarr.svg" class="img-fluid" card-img-top />
               </div>
         </a>
@@ -94,7 +94,7 @@
         </a>
       </div><div class="col">
         <a href="https://immich.asimplesock.com">
-            <div class="p-1 mr-2">
+            <div class="p-1 mr-2 mt-2">
                 <img src="pictures/immich.png" class="img-fluid" card-img-top />
               </div>
         </a>
