--- a/foss.html
+++ b/foss.html
@@ -238,7 +238,7 @@ body.loaded .preloader {
       </a>
     </div>
     <div class="col">
-      <a href="https://radarr.asimplesock.com">
+      <a href="https://radarr.asimplesock.com/radarr/add/new?term=">
           <div class="p-2 ml-2 mt-2">
               <img src="pictures/radarr.svg" class="img-fluid" card-img-top />
             </div>
