--- a/foss.html
+++ b/foss.html
@@ -250,10 +250,26 @@ body.loaded .preloader {
               <img src="pictures/hassio.svg" class="img-fluid" card-img-top />
             </div>
       </a>
-    </div><div class="col">
+    </div>
+    <div class="col">
       <a href="https://immich.asimplesock.com">
           <div class="p-1 mr-2 mt-2">
               <img src="pictures/immich.png" class="img-fluid" card-img-top />
+            </div>
+      </a>
+    </div>
+
+    <div class="col">
+      <a href="https://firefox.asimplesock.com">
+          <div class="p-1 mr-2 mt-2">
+              <img src="pictures/firefox.svg" class="img-fluid" card-img-top />
+            </div>
+      </a>
+    </div>
+    <div class="col">
+      <a href="https://seafile.asimplesock.com">
+          <div class="p-1 mr-2 mt-2">
+              <img src="pictures/seafile.svg" class="img-fluid" card-img-top />
             </div>
       </a>
     </div>
