--- a/foss.html
+++ b/foss.html
@@ -261,14 +261,22 @@ body.loaded .preloader {
 
     <div class="col">
       <a href="https://firefox.asimplesock.com">
-          <div class="p-1 mr-2 mt-2">
+          <div class="p-1 ml-2 mt-2">
               <img src="pictures/firefox.svg" class="img-fluid" card-img-top />
+            </div>
+      </a>
+    </div>
+   
+    <div class="col">
+      <a href="https://torrent.asimplesock.com">
+          <div class="p-2 mt-2">
+              <img src="pictures/qbittorrent.svg" class="img-fluid" card-img-top />
             </div>
       </a>
     </div>
     <div class="col">
       <a href="https://seafile.asimplesock.com">
-          <div class="p-1 mr-2 mt-2">
+          <div class="p-2 mr-2 mt-2">
               <img src="pictures/seafile.svg" class="img-fluid" card-img-top />
             </div>
       </a>
