--- a/foss.html
+++ b/foss.html
@@ -217,42 +217,42 @@ body.loaded .preloader {
   <div class="row row-cols-3 g-3 gap-3">
     
     <div class="col">
-      <a href="https://sonarr.asimplesock.com">
+      <a href="https://sonarr.asimplesock.com" target="_blank">
           <div class="p-2 ml-2 mt-2">
               <img src="pictures/sonarr.svg" class="img-fluid" card-img-top />
             </div>
       </a>
     </div>
     <div class="col">
-      <a href="https://jellyfin.asimplesock.com">
+      <a href="https://jellyfin.asimplesock.com" target="_blank">
           <div class="p-1 mt-1">
               <img src="pictures/jellyfin.svg" class="img-fluid" card-img-top />
             </div>
       </a>
     </div>
     <div class="col">
-      <a href="https://prowlarr.asimplesock.com">
+      <a href="https://prowlarr.asimplesock.com" target="_blank">
           <div class="p-2 mr-2 mt-2">
               <img src="pictures/prowlarr.svg" class="img-fluid" card-img-top />
             </div>
       </a>
     </div>
     <div class="col">
-      <a href="https://radarr.asimplesock.com/radarr/add/new?term=">
+      <a href="https://radarr.asimplesock.com/radarr/add/new?term=" target="_blank">
           <div class="p-2 ml-2 mt-2">
               <img src="pictures/radarr.svg" class="img-fluid" card-img-top />
             </div>
       </a>
     </div>
     <div class="col">
-      <a href="https://home.asimplesock.com">
+      <a href="https://home.asimplesock.com" target="_blank">
           <div class="p-1 mb-1">
               <img src="pictures/hassio.svg" class="img-fluid" card-img-top />
             </div>
       </a>
     </div>
     <div class="col">
-      <a href="https://immich.asimplesock.com">
+      <a href="https://immich.asimplesock.com" target="_blank">
           <div class="p-1 mr-2 mt-2">
               <img src="pictures/immich.png" class="img-fluid" card-img-top />
             </div>
@@ -260,7 +260,7 @@ body.loaded .preloader {
     </div>
 
     <div class="col">
-      <a href="https://firefox.asimplesock.com">
+      <a href="https://firefox.asimplesock.com" target="_blank">
           <div class="p-1 ml-2 mt-2">
               <img src="pictures/firefox.svg" class="img-fluid" card-img-top />
             </div>
@@ -268,14 +268,14 @@ body.loaded .preloader {
     </div>
    
     <div class="col">
-      <a href="https://torrent.asimplesock.com">
+      <a href="https://torrent.asimplesock.com" target="_blank">
           <div class="p-2 mt-2">
               <img src="pictures/qbittorrent.svg" class="img-fluid" card-img-top />
             </div>
       </a>
     </div>
     <div class="col">
-      <a href="https://seafile.asimplesock.com">
+      <a href="https://seafile.asimplesock.com" target="_blank">
           <div class="p-2 mr-2 mt-2">
               <img src="pictures/seafile.svg" class="img-fluid" card-img-top />
             </div>
