--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
       .list { font-family: 'Ubuntu', sans-serif }
       .dates { color: #D3D3D3 }
 
+      iframe {
+  width:100%;
+  height:400px;
+}
+
     </style>
   </head>
   <body>
@@ -58,17 +63,30 @@
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
-    <h5 class="card-title h">Replacable RTC Batteries. Please.</h5>
-      <img src="pictures/perimeter.jpg" class="card-img-top" alt="..." width="2454">
+    <h5 class="card-title h">Arr-s.</h5>
+    <iframe src="https://asimplesock.com/foss" title="foss"></iframe>
       <br>
       <br>
-      <p class="card-text">Snipping the tiny tangled wires on my Mom's very proprietary Perimeter was NOT a fun task. iFixit 4/10.</p>
-    <p class="card-text"><small class="text-muted">16th November, 2023.</small></p>
+      <p class="card-text">Radarr, Sonarr and Prowlarr. Click the icons to use!</p>
+    <p class="card-text"><small class="text-muted">30th January, 2024.</small></p>
   </div>
   </div>
   </div>
 
   <hr>
+  <div class="container"><div class="card" style="max-width: 25rem;">
+    <div class="card-body">
+      <h5 class="card-title h">Replacable RTC Batteries. Please.</h5>
+        <img src="pictures/perimeter.jpg" class="card-img-top" alt="..." width="2454">
+        <br>
+        <br>
+        <p class="card-text">Snipping the tiny tangled wires on my Mom's very proprietary Perimeter was NOT a fun task. iFixit 4/10.</p>
+      <p class="card-text"><small class="text-muted">16th November, 2023.</small></p>
+    </div>
+    </div>
+    </div>
+  
+    <hr>
 
   <div class="container"><div class="card" style="max-width: 25rem;">
     <div class="card-body">
