--- a/index.html
+++ b/index.html
@@ -74,6 +74,21 @@
   </div>
 
   <hr>
+
+  <div class="container"><div class="card" style="max-width: 25rem;">
+    <div class="card-body">
+      <h5 class="card-title h">AI Face Detection.</h5>
+        <img src="pictures/deepstack.png" class="card-img-top" alt="..." width="2454">
+        <br>
+        <br>
+        <p class="card-text">Adding yet another dimension to the CCTV Cameras using <a href="https://github.com/johnolafenwa/DeepStack" >Deepstack</a>.</p>
+      <p class="card-text"><small class="text-muted">16th January, 2024.</small></p>
+    </div>
+    </div>
+    </div>
+
+    <hr>
+  
   <div class="container"><div class="card" style="max-width: 25rem;">
     <div class="card-body">
       <h5 class="card-title h">Replacable RTC Batteries. Please.</h5>
