--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <div class="container"><div class="card" style="max-width: 25rem;">
     <div class="card-body">
-      <h5 class="card-title h">AI Face Detection.</h5>
+      <h5 class="card-title h">AI Person Identification.</h5>
         <img src="pictures/deepstack.png" class="card-img-top" alt="..." width="2454">
         <br>
         <br>
