--- a/foss.html
+++ b/foss.html
@@ -281,6 +281,38 @@ body.loaded .preloader {
             </div>
       </a>
     </div>
+
+    <div class="col">
+      <a href="https://bazarr.asimplesock.com" target="_blank">
+          <div class="p-2 ml-2 mt-2">
+              <img src="pictures/bazarr.png" class="img-fluid" card-img-top />
+            </div>
+      </a>
+    </div>
+
+    <div class="col">
+      <a href="https://kuma.asimplesock.com/status/server" target="_blank">
+          <div class="p-2 ml-2 mt-2">
+              <img src="pictures/kuma.png" class="img-fluid" card-img-top />
+            </div>
+      </a>
+    </div>
+
+    <div class="col">
+      <a href="https://jellyseer.asimplesock.com" target="_blank">
+          <div class="p-2 mr-2 mt-2">
+              <img src="pictures/jellyseer.png" class="img-fluid" card-img-top />
+            </div>
+      </a>
+    </div>
+
+    <div class="col">
+      <a href="https://cloud.asimplesock.com" target="_blank">
+          <div class="p-3 ml-2 mt-2">
+              <img src="pictures/nextcloud.png" class="img-fluid" card-img-top />
+            </div>
+      </a>
+    </div>
 </div>
 </div>
 
