--- a/index.html
+++ b/index.html
@@ -63,17 +63,31 @@
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
-    <h5 class="card-title h">Arr-s.</h5>
-    <iframe src="https://asimplesock.com/foss" title="foss"></iframe>
+    <h5 class="card-title h">Uptime Kuma</h5>
+    <img src="pictures/kumareal.png" class="card-img-top" alt="..." width="2454">
+    <br>
       <br>
-      <br>
-      <p class="card-text">Radarr, Sonarr and Prowlarr. Click the icons to use!</p>
-    <p class="card-text"><small class="text-muted">30th January, 2024.</small></p>
+      <p class="card-text">View status <a href="https://kuma.asimplesock.com/status/server" >here</a>.</p>
+    <p class="card-text"><small class="text-muted">5th March, 2024.</small></p>
   </div>
   </div>
   </div>
 
   <hr>
+
+  <div class="container"><div class="card" style="max-width: 25rem;">
+    <div class="card-body">
+      <h5 class="card-title h">Arr-s.</h5>
+      <iframe src="https://asimplesock.com/foss" title="foss"></iframe>
+        <br>
+        <br>
+        <p class="card-text">Radarr, Sonarr and Prowlarr. Click the icons to use!</p>
+      <p class="card-text"><small class="text-muted">30th January, 2024.</small></p>
+    </div>
+    </div>
+    </div>
+  
+    <hr>
 
   <div class="container"><div class="card" style="max-width: 25rem;">
     <div class="card-body">
