--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
     <h5 class="card-title h">Server Dashboard</h5>
-    <img src="pictures/dashboard.jpg" class="card-img-top" alt="..." width="2454">
+    <img src="pictures/dashboard.png" class="card-img-top" alt="..." width="2454">
     <br>
       <br>
       <p class="card-text">Check it out live <a href="https://dashboard.asimplesock.com" >here</a>.</p>
