--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <br>
       <br>
       <p class="card-text">Check it out live <a href="https://dashboard.asimplesock.com" >here</a>.</p>
-    <p class="card-text"><small class="text-muted">5th March, 2024.</small></p>
+    <p class="card-text"><small class="text-muted">23rd March, 2024.</small></p>
   </div>
   </div>
   </div>
