--- a/index.html
+++ b/index.html
@@ -74,13 +74,29 @@
 
   <hr>
 
+  <div class="container"><div class="card" style="max-width: 25rem;">
+<div class="card-body">
+  <h5 class="card-title h">Migrated to Proxmox</h5>
+  <img src="pictures/proxmox.png" class="card-img-top" alt="..." width="2454">
+  <br>
+    <br>
+    <p class="card-text">Finally the server follows some good practices. Every service is isolated and containerized or its own virtual machine.</p>
+  <p class="card-text"><small class="text-muted">25th August, 2024.</small></p>
+</div>
+</div>
+</div>
+
+<hr>
+
+
+
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
     <h5 class="card-title h">Uptime Kuma</h5>
     <img src="pictures/kumareal.png" class="card-img-top" alt="..." width="2454">
     <br>
       <br>
-      <p class="card-text">View status <a href="https://kuma.asimplesock.com/status/server" >here</a>.</p>
+      <p class="card-text">View status <a href="https://server.asimplesock.com/status/server" >here</a>.</p>
     <p class="card-text"><small class="text-muted">5th March, 2024.</small></p>
   </div>
   </div>
