--- a/index.html
+++ b/index.html
@@ -60,6 +60,20 @@
 
 <br>
 
+  <div class="container"><div class="card" style="max-width: 25rem;">
+<div class="card-body">
+  <h5 class="card-title h">Tainji</h5>
+  <img src="https://tianji.asimplesock.com/telemetry/clnzoxcy10001vy2ohi4obbi0/cm1rsuzix000hb3rkuqrvhons/badge.svg" class="card-img-top" alt="..." width="2454">
+  <br>
+    <br>
+<!--     <p class="card-text"></p> -->
+  <p class="card-text"><small class="text-muted">2nd October, 2024.</small></p>
+</div>
+</div>
+</div>
+
+<hr>
+
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
     <h5 class="card-title h">Server Dashboard</h5>
