--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <img src="https://tianji.asimplesock.com/telemetry/clnzoxcy10001vy2ohi4obbi0/cm1rsuzix000hb3rkuqrvhons/badge.svg" class="card-img-top" alt="..." width="2454">
   <br>
     <br>
-<!--     <p class="card-text"></p> -->
+    <p class="card-text">COunter increases by 1 (one) every visit.</p>
   <p class="card-text"><small class="text-muted">2nd October, 2024.</small></p>
 </div>
 </div>
