--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <div class="container"><div class="card" style="max-width: 25rem;">
 <div class="card-body">
-  <h5 class="card-title h">Tainji</h5>
+  <h5 class="card-title h">Tianji</h5>
   <img src="https://tianji.asimplesock.com/telemetry/clnzoxcy10001vy2ohi4obbi0/cm1rsuzix000hb3rkuqrvhons/badge.svg" class="card-img-top" alt="..." width="2454">
   <br>
     <br>
