add ecg machine

--- a/index.html
+++ b/index.html
@@ -60,6 +60,20 @@
 
 <br>
 
+<div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
+    <h5 class="card-title h">Accessible RTC Batteries. Please.</h5>
+    <img src="pictures/ecg.jpg" class="card-img-top" alt="..." width="2454">
+    <br>
+      <br>
+      <p class="card-text">Okay so this ECG Machine had a 'replacable' RTC Battery but it was hardly 'accessible'. Be careful what you wish for.</p>
+    <p class="card-text"><small class="text-muted">13th December, 2024.</small></p>
+  </div>
+  </div>
+  </div>
+  
+  <hr>
+
   <div class="container"><div class="card" style="max-width: 25rem;">
 <div class="card-body">
   <h5 class="card-title h">Tianji</h5>
