--- a/joyfin.html
+++ b/joyfin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Side-by-Side Iframes</title>
+    <title>JoyFin and Proxies</title>
     <style>
         body {
             margin: 0;
@@ -39,17 +39,20 @@
 
 <div class="container">
     <div class="iframe-container">
-        <h2><a href=https://joyfin.asimplesock.com>Singapore</a></h2>
+        <h2><a href=https://joyfin.asimplesock.com>Bangalore</a></h2>
         <iframe src="https://fast.asimplesock.com"></iframe>
     </div>
     <div class="iframe-container">
-        <h2><a href=https://joyflare.asimplesock.com>India</a></h2>
+        <h2><a href=https://joyflare.asimplesock.com>CloudFlare Tunnel</a></h2>
         <iframe src="https://speed.asimplesock.com"></iframe>
     </div>
 </div>
 
 <div class="container">
     <h2>Best is always the <a href=https://joyflix.asimplesock.com>direct IPv6 connection</a> (IPv6 required, test <a href=https://test-ipv6.com>here.</a>)</h2>
+</div>
+<div class="container">
+    <h4>NAT46 proxied through cloudflare. I don't see where this would be be the best one to use but just in case: <a href=https://joyproxy.asimplesock.com></a></a></h4>
 </div>
 
 </body>
