--- a/index.html
+++ b/index.html
@@ -62,6 +62,21 @@
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
+    <h5 class="card-title h">What are you printing there?</h5>
+    <img src="pictures/klipper.png" class="card-img-top" alt="..." width="2454">
+    <br>
+      <br>
+      <p class="card-text">Migrated my Ender3 from Marlin to Klipper to breathe some new life into it.</p>
+      <p class="card-text">Let's see what improvements we get.</p>
+    <p class="card-text"><small class="text-muted">2nd June, 2025.</small></p>
+  </div>
+  </div>
+  </div>
+  
+  <hr>
+
+<div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
     <h5 class="card-title h">Accessible RTC Batteries. Please.</h5>
     <img src="pictures/ecg.jpg" class="card-img-top" alt="..." width="2454">
     <br>
