--- a/index.html
+++ b/index.html
@@ -75,6 +75,27 @@
   
   <hr>
 
+
+  <div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
+    <h5 class="card-title h">My Media Server.</h5>
+    <img src="pictures/joyfin.png" class="card-img-top" alt="..." width="2454">
+    <br>
+      <br>
+      <p class="card-text">So I finally made something that people use xD</p>
+      <p class="card-text"><a href="https://joyfin.asimplesock.com" >Here</a> it is.</p>
+      <p class="card-text">Stats for the last 12 weeks -></p>
+    <img src="pictures/stats.png" class="card-img" alt="..." width="2454">
+    <br>
+    <br>
+    <p class="card-text">Powered by the Arr-s and Jellyfin and Jellyseer and -...</p>
+    <p class="card-text"><small class="text-muted">23rd November, 2024.</small></p>
+  </div>
+  </div>
+  </div>
+  
+  <hr>
+
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
     <h5 class="card-title h">Accessible RTC Batteries. Please.</h5>
