--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
   <hr>
 
 
+<div class="container">
+  <div class="card text-white mb-3" style="max-width: 25rem; background-color: #000000;">
+    <img class="card-img-top" src="pictures/702.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">End of an Era.</h5>
+      <p class="card-text"><small class="text-muted">27th April, 2025.</small></p>
+    </div>
+  </div>
+</div>
+<hr>
+
   <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
     <h5 class="card-title h">My Media Server.</h5>
@@ -89,7 +100,7 @@
     <br>
     <br>
     <p class="card-text">Powered by the Arr-s and Jellyfin and Jellyseer and -...</p>
-    <p class="card-text"><small class="text-muted">23rd November, 2024.</small></p>
+    <p class="card-text"><small class="text-muted">1st January, 2025.</small></p>
   </div>
   </div>
   </div>
