--- a/index.html
+++ b/index.html
@@ -62,6 +62,25 @@
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
+    <h5 class="card-title h">Drying 3D Printer Filament.</h5>
+    
+      <p class="card-text">So all this time that I was not home, all my filament became moist. Time to unmoisten it.</p>
+      <img src="pictures/beddry.jpg" class="card-img-top" alt="..." width="2454">
+      <br>
+      <br>
+      <p class="card-text">The Ender's Heated Bed was enough. Look at that relative humidity difference!</p>
+      <p class="card-text">My room feels like a sauna.</p>
+      <img src="pictures/humid.png" class="card-img-top" alt="..." width="2454">
+    
+    <p class="card-text"><small class="text-muted">4nd June, 2025.</small></p>
+  </div>
+  </div>
+  </div>
+  
+  <hr>
+
+<div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
     <h5 class="card-title h">What are you printing there?</h5>
     <img src="pictures/klipper.png" class="card-img-top" alt="..." width="2454">
     <br>
