--- a/index.html
+++ b/index.html
@@ -60,6 +60,17 @@
 
 <br>
 
+<div class="container">
+  <div class="card text-white mb-3" style="max-width: 25rem; background-color: #000000;">
+    <img class="card-img-top" src="pictures/moon.png" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Ganon's power grows, it rises to its peak under the hour of the-</h5>
+      <p class="card-text"><small class="text-muted">8th September, 2025.</small></p>
+    </div>
+  </div>
+</div>
+<hr>
+
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
     <h5 class="card-title h">Copper Plating Attempts.</h5>
